# applied_programming_ust.py

./: alembic.ini  lab_7.py  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: bc5f4c410ba2_.py
static/: swagger.json
